--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,21 @@
 
+Lingot 0.9.0 (2011-02-21)
+-------------------------
+
+* Lingot is now an universal tuner, it can tune any instrument according to a
+  provided scale.
+	   + Scale edition in a table.
+	   + Importation of Scala .scl files (http://www.huygens-fokker.org/scala/)
+	   + The gauge adapts its range to the scale. 
+	   + The deviation control has been moved to the scale tab.
+* Now it's possible to load and save configuration files from the GUI.
+* The graphic controllers in the audio capture section have been changed. The
+  user can choose now any hardware sampling rate, and is notified when the
+  rate is not available.
+* The GUI has been improved with tooltips and new notification messages.	   
+* Fixed bugs #31532 and #31369.
+
+
 Lingot 0.8.1 (2010-03-17)
 -------------------------
 
