--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+2011-03-11 Ibán Cereijo <ibancg@gmail.com>
+
+	* Fixed bug #33046 (#622038 in debian).
+
 2011-02-21 Ibán Cereijo <ibancg@gmail.com>
 
 	* Fixed bug #31532.
