--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+2011-08-22 Ibán Cereijo <ibancg@gmail.com>
+
+	* Released lingot 0.9.1
+	
 2011-08-13 Ibán Cereijo <ibancg@gmail.com>
 
 	* Fixed bug #34007 (#637610 in debian).
