--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+2011-09-27 Ibán Cereijo <ibancg@gmail.com>
+
+	* Fixed bug #643435 in debian
+
 2011-08-22 Ibán Cereijo <ibancg@gmail.com>
 
 	* Released lingot 0.9.1
