--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,12 @@
 
+Lingot 0.9.1 (2011-08-22)
+-------------------------
+
+ * Fixed bug #34007 (#637610 in debian).
+ * Fixed bug #33046 (#622038 in debian).
+ * Added 48K sample rate to OSS and ALSA.
+
+
 Lingot 0.9.0 (2011-02-21)
 -------------------------
 
