--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 
+2011-11-28 Ibán Cereijo <ibancg@gmail.com>
+
+	* Added libfftw support.
+	* Enhanced some error messages.
+	* Implemented task #10683: config file validation.
+
 2011-11-23 Ibán Cereijo <ibancg@gmail.com>
 
 	* Added PulseAudio support.
