--- a/po/gl.po
+++ b/po/gl.po
@@ -1,4 +1,4 @@
-# Spanish translations for Lingot.
+# Galician translations for Lingot.
 # Copyright (C) 2004-2011 Ibán Cereijo Graña, 2004-2011 Jairo Chapela Martínez
 # This file is distributed under the same license as the lingot package.
 # Ibán Cereijo Graña <ibancg@gmail.com>, 2007-2011.
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lingot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-28 20:31+0100\n"
+"POT-Creation-Date: 2011-11-29 01:33+0100\n"
 "PO-Revision-Date: 2007-08-23 17:46+0200\n"
 "Last-Translator: Ibán Cereijo <ibancg@gmail.com>\n"
 "Language-Team: Galician <LL@li.org>\n"
@@ -514,73 +514,76 @@ msgstr "f = ---"
 msgid "lingot"
 msgstr "lingot"
 
-#: ../src/lingot-audio-oss.c:56
+#: ../src/lingot-audio-oss.c:56 ../src/lingot-audio-alsa.c:56
 #, c-format
 msgid ""
-"Unable to open audio device %s.\n"
-"%s."
+"Cannot open audio device '%s'.\n"
+"%s"
 msgstr ""
-"Imposible abrir o dispositivo de audio %s.\n"
-"%s."
+"Imposible abrir o dispositivo de audio '%s'.\n"
+"%s"
 
-#: ../src/lingot-audio-oss.c:63
-#, c-format
-msgid ""
-"Error setting number of channels.\n"
-"%s."
-msgstr ""
-"Erro establecendo o número de canles.\n"
-"%s."
+#: ../src/lingot-audio-oss.c:64
+msgid "Error setting number of channels."
+msgstr "Erro establecendo o número de canles."
 
-#: ../src/lingot-audio-oss.c:71
-#, c-format
-msgid ""
-"Error setting bits per sample.\n"
-"%s."
-msgstr ""
-"Error establecendo os bits por mostra.\n"
-"%s."
+#: ../src/lingot-audio-oss.c:73
+msgid "Error setting bits per sample."
+msgstr "Erro establecendo os bits por mostra."
 
-#: ../src/lingot-audio-oss.c:86
-#, c-format
-msgid ""
-"Error setting DMA buffer size.\n"
-"%s."
-msgstr ""
-"Error establecendo o tamaño do búfer DMA.\n"
-"%s."
+#: ../src/lingot-audio-oss.c:88
+msgid "Error setting DMA buffer size."
+msgstr "Erro establecendo o tamaño do búfer DMA."
 
-#: ../src/lingot-audio-oss.c:92
-#, c-format
-msgid ""
-"Error setting sample rate.\n"
-"%s."
-msgstr ""
-"Error establecendo tasa de mostreo.\n"
-"%s."
+#: ../src/lingot-audio-oss.c:93
+msgid "Error setting sample rate."
+msgstr "Erro establecendo tasa de mostreo."
 
-#: ../src/lingot-audio-oss.c:128
+#: ../src/lingot-audio-oss.c:129 ../src/lingot-audio-alsa.c:162
 msgid "Read from audio interface failed."
 msgstr "A lectura do dispositivo fallou."
+
+#: ../src/lingot-audio-alsa.c:65 ../src/lingot-audio-alsa.c:73
+msgid "Cannot initialize hardware parameter structure."
+msgstr "Imposible establecer estructura de parámetros hardware."
+
+#: ../src/lingot-audio-alsa.c:80
+msgid "Cannot set access type."
+msgstr "Imposible establecer tipo de acceso."
+
+#: ../src/lingot-audio-alsa.c:87
+msgid "Cannot set sample format."
+msgstr "Imposible establecer formato de mostra."
+
+#: ../src/lingot-audio-alsa.c:96
+msgid "Cannot set sample rate."
+msgstr "Imposible establecer tasa de mostreo."
+
+#: ../src/lingot-audio-alsa.c:105
+msgid "Cannot set channel number."
+msgstr "Imposible establecer número de canles."
+
+#: ../src/lingot-audio-alsa.c:111
+msgid "Cannot set parameters."
+msgstr "Imposible establecer parámetros."
+
+#: ../src/lingot-audio-alsa.c:118
+msgid "Cannot prepare audio interface for use."
+msgstr "Imposible preparar a interfaz de audio."
 
 #: ../src/lingot-audio-alsa.c:140
 msgid "The application has not been built with ALSA support"
 msgstr "A aplicación non foi construída con soporte para ALSA"
 
-#: ../src/lingot-audio-alsa.c:162
-#, c-format
-msgid ""
-"Read from audio interface failed.\n"
-"%s."
-msgstr ""
-"A lectura do dispositivo fallou.\n"
-"%s."
+#: ../src/lingot-audio-alsa.c:224
+msgid "Default Device"
+msgstr "Dispositivo predeterminado"
 
 #: ../src/lingot-audio-jack.c:61
 msgid "Missing connection with JACK audio server"
 msgstr "Perdida a conexión có servidor JACK"
 
-#: ../src/lingot-audio-jack.c:90 ../src/lingot-audio-jack.c:191
+#: ../src/lingot-audio-jack.c:90 ../src/lingot-audio-jack.c:190
 msgid "Unable to connect to JACK server"
 msgstr "Non é posible conectar có servidor JACK"
 
@@ -588,40 +591,45 @@ msgstr "Non é posible conectar có servidor JACK"
 msgid "No more JACK ports available"
 msgstr "No hai máis portos JACK disponibles"
 
-#: ../src/lingot-audio-jack.c:134 ../src/lingot-audio-jack.c:254
-#: ../src/lingot-audio-jack.c:321 ../src/lingot-audio-jack.c:353
+#: ../src/lingot-audio-jack.c:133 ../src/lingot-audio-jack.c:255
+#: ../src/lingot-audio-jack.c:322 ../src/lingot-audio-jack.c:354
 msgid "The application has not been built with JACK support"
 msgstr "A aplicación non foi construída con soporte para JACK"
 
-#: ../src/lingot-audio-jack.c:272
+#: ../src/lingot-audio-jack.c:242
+msgid "Default Port"
+msgstr "Porto predeterminado."
+
+#: ../src/lingot-audio-jack.c:273
 msgid "Cannot activate client"
 msgstr "No é posible activar o cliente"
 
-#: ../src/lingot-audio-jack.c:278
+#: ../src/lingot-audio-jack.c:279
 msgid "No active capture ports"
 msgstr "Non hai portos físicos de captura"
 
-#: ../src/lingot-audio-jack.c:289 ../src/lingot-audio-jack.c:309
+#: ../src/lingot-audio-jack.c:290 ../src/lingot-audio-jack.c:310
 msgid "Cannot connect input ports"
 msgstr "Non é posible conectar os portos de entrada"
 
-#: ../src/lingot-audio-jack.c:304
+#: ../src/lingot-audio-jack.c:305
 msgid "No physical capture ports"
 msgstr "No hai portos físicos de captura"
 
 #: ../src/lingot-config.c:640
 #, c-format
 msgid ""
-"Error parsing the configuration file, line %i: unrecognized audio system "
-"'%s', assuming default audio system.\n"
+"Error parsing the configuration file, line %i: unrecognized audio system, "
+"assuming default value.\n"
 msgstr ""
-"Erro lendo o arquivo de configuración, liña %i: sistema de audio descoñecido "
-"'%s', asumindo valor por defecto.\n"
+"Erro lendo o arquivo de configuración, liña %i: sistema de audio "
+"descoñecido, asumindo valor por defecto.\n"
 
 #: ../src/lingot-config.c:665
 msgid ""
 "The configuration file contains errors, and hence some default values have "
-"been chosen. Please consider fixing the problem in the configuration dialog."
+"been chosen. The problem will be fixed once you have accepted the settings "
+"in the configuration dialog."
 msgstr ""
 "O ficheiro de configuración contén erros, e por tanto usaránse valores por "
 "defecto en certos parámetros. Considere comprobar os devanditos valores e "
@@ -665,15 +673,19 @@ msgstr ""
 "O búfer da ventá temporal é menor que o de FFT, foi incrementado a %0.3f "
 "segundos"
 
-#: ../src/lingot-gui-mainframe.c:104
+#: ../src/lingot-gui-mainframe.c:95
+msgid "Logo design"
+msgstr "Deseño do logo"
+
+#: ../src/lingot-gui-mainframe.c:106
 msgid "Accurate and easy to use musical instrument tuner"
 msgstr "Afinador de instrumentos preciso e fácil de usar"
 
-#: ../src/lingot-gui-mainframe.c:107
+#: ../src/lingot-gui-mainframe.c:109
 msgid "translator-credits"
 msgstr "Ibán Cereijo Graña <ibancg@gmail.com>"
 
-#: ../src/lingot-gui-mainframe.c:258
+#: ../src/lingot-gui-mainframe.c:261
 msgid ""
 "Please check that there are not other processes locking the requested "
 "device. Also, consider that some audio servers can sometimes hold the "
@@ -685,31 +697,31 @@ msgstr ""
 "uns segundos tras a última vez que foron utilizados. Nese caso inténteo de "
 "novo nuns intres."
 
-#: ../src/lingot-gui-mainframe.c:267
+#: ../src/lingot-gui-mainframe.c:270
 msgid "The core is not running, you must check your configuration."
 msgstr "O core non está funcionando, debe comprobar a configuración."
 
-#: ../src/lingot-gui-mainframe.c:281
+#: ../src/lingot-gui-mainframe.c:287
 msgid "Error"
 msgstr "Erro"
 
-#: ../src/lingot-gui-mainframe.c:283
+#: ../src/lingot-gui-mainframe.c:289
 msgid "Warning"
 msgstr "Aviso"
 
-#: ../src/lingot-gui-mainframe.c:283
+#: ../src/lingot-gui-mainframe.c:289
 msgid "Info"
 msgstr "Información"
 
-#: ../src/lingot-gui-mainframe.c:307
+#: ../src/lingot-gui-mainframe.c:313
 msgid "Open Configuration File"
 msgstr "Abrir arquivo de configuración"
 
-#: ../src/lingot-gui-mainframe.c:315 ../src/lingot-gui-mainframe.c:359
+#: ../src/lingot-gui-mainframe.c:321 ../src/lingot-gui-mainframe.c:364
 msgid "Lingot configuration files"
 msgstr "Arquivos de configuración de lingot"
 
-#: ../src/lingot-gui-mainframe.c:348
+#: ../src/lingot-gui-mainframe.c:353
 msgid "Save Configuration File"
 msgstr "Gardar arquivo de configuración"
 
@@ -831,5 +843,6 @@ msgstr ""
 "'Desprazamento'). Pode empregar tanto un valor numérico, ou as palabras "
 "clave 'mid-C' (261.625565 Hz) e 'mid-A' (440 Hz)."
 
-#~ msgid "The scale cannot be imported: file format error"
-#~ msgstr "A escala non pode ser importada: o ficheiro contén erros de formato"
+#, fuzzy
+#~ msgid "Cannot connect to JACK server"
+#~ msgstr "Non é posible conectar có servidor JACK"
